Back to scholar bib

--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,4 @@
-@article{Chernoff52measure,
+@article{chernoff1952measure,
   title={A measure of asymptotic efficiency for tests of a hypothesis based on the sum of observations},
   author={Chernoff, Herman},
   journal={The Annals of Mathematical Statistics},
@@ -7,7 +7,7 @@
   publisher={JSTOR}
 }
 
-@incollection{Hoeffding94probability,
+@incollection{hoeffding1994probability,
   title={Probability inequalities for sums of bounded random variables},
   author={Hoeffding, Wassily},
   booktitle={The collected works of Wassily Hoeffding},
@@ -16,7 +16,7 @@
   publisher={Springer}
 }
 
-@article{RobbinsM51stochastic,
+@article{robbins1951stochastic,
   title={A stochastic approximation method},
   author={Robbins, Herbert and Monro, Sutton},
   journal={The annals of mathematical statistics},
@@ -25,9 +25,9 @@
   publisher={JSTOR}
 }
 
-@article{Tropp12user,
+@article{tropp2012user,
   title={User-friendly tail bounds for sums of random matrices},
-  author={Joel A. Tropp},
+  author={Tropp, Joel A},
   journal={Foundations of computational mathematics},
   volume={12},
   number={4},
@@ -36,9 +36,9 @@
   publisher={Springer}
 }
 
-@article{Tropp15introduction,
+@article{tropp2015introduction,
   title={An Introduction to Matrix Concentration Inequalities},
-  author={Joel A. Tropp},
+  author={Tropp, Joel A},
   journal={Foundations and Trends{\textregistered} in Machine Learning},
   volume={8},
   number={1-2},
@@ -47,9 +47,9 @@
   publisher={Now Publishers Inc. Hanover, MA, USA}
 }
 
-@article{Bubeck15convex,
+@article{bubeck2015convex,
   title={Convex Optimization: Algorithms and Complexity},
-  author={S{\'e}bastien Bubeck},
+  author={Bubeck, S{\'e}bastien},
   journal={Foundations and Trends{\textregistered} in Machine Learning},
   volume={8},
   number={3-4},
@@ -58,9 +58,9 @@
   publisher={Now Publishers Inc. Hanover, MA, USA}
 }
 
-@article{Woodruff14sketching,
+@article{woodruff2014sketching,
   title={Sketching as a Tool for Numerical Linear Algebra},
-  author={David P. Woodruff},
+  author={Woodruff, David P and others},
   journal={Foundations and Trends{\textregistered} in Theoretical Computer Science},
   volume={10},
   number={1--2},
@@ -69,56 +69,31 @@
   publisher={Now Publishers, Inc.}
 }
 
-@inproceedings{ClarksonW13low,
-  author    = {Kenneth L. Clarkson and
-               David P. Woodruff},
-  editor    = {Dan Boneh and
-               Tim Roughgarden and
-               Joan Feigenbaum},
-  title     = {Low rank approximation and regression in input sparsity time},
-  booktitle = {Symposium on Theory of Computing Conference, STOC'13, Palo Alto, CA,
-               USA, June 1-4, 2013},
-  pages     = {81--90},
-  publisher = {{ACM}},
-  year      = {2013},
-  url       = {https://doi.org/10.1145/2488608.2488620},
-  doi       = {10.1145/2488608.2488620},
-  timestamp = {Tue, 06 Nov 2018 11:07:05 +0100},
-  biburl    = {https://dblp.org/rec/conf/stoc/ClarksonW13.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+@inproceedings{clarkson2013low,
+  title={Low rank approximation and regression in input sparsity time},
+  author={Clarkson, Kenneth L and Woodruff, David P},
+  booktitle={Proceedings of the forty-fifth annual ACM symposium on Theory of Computing},
+  pages={81--90},
+  year={2013}
 }
 
-@inproceedings{JacotHG18neural,
-  author    = {Arthur Jacot and
-               Cl{\'{e}}ment Hongler and
-               Franck Gabriel},
-  editor    = {Samy Bengio and
-               Hanna M. Wallach and
-               Hugo Larochelle and
-               Kristen Grauman and
-               Nicol{\`{o}} Cesa{-}Bianchi and
-               Roman Garnett},
-  title     = {Neural Tangent Kernel: Convergence and Generalization in Neural Networks},
-  booktitle = {Advances in Neural Information Processing Systems 31: Annual Conference
-               on Neural Information Processing Systems 2018, NeurIPS 2018, December
-               3-8, 2018, Montr{\'{e}}al, Canada},
-  pages     = {8580--8589},
-  year      = {2018},
-  url       = {https://proceedings.neurips.cc/paper/2018/hash/5a4be1fa34e62bb8a6ec6b91d2462f5a-Abstract.html},
-  timestamp = {Thu, 21 Jan 2021 15:15:21 +0100},
-  biburl    = {https://dblp.org/rec/conf/nips/JacotHG18.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
-}
-
-@article{Allen18convex,
-  title={From Convex to Nonconvex Optimization: Algorithm Design and Global Convergence},
-  author={Zeyuan Allen{-}Zhu},
+@inproceedings{jacot2018neural,
+  title={Neural tangent kernel: convergence and generalization in neural networks},
+  author={Jacot, Arthur and Gabriel, Franck and Hongler, Cl{\'e}ment},
+  booktitle={Proceedings of the 32nd International Conference on Neural Information Processing Systems},
+  pages={8580--8589},
   year={2018}
 }
 
-@article{JainK17non,
+@article{allen2018convex,
+  title={From Convex to Nonconvex Optimization: Algorithm Design and Global Convergence},
+  author={Allen-Zhu, Zeyuan},
+  year={2018}
+}
+
+@article{jain2017non,
   title={Non-convex Optimization for Machine Learning},
-  author={Prateek Jain and Purushottam Kar},
+  author={Jain, Prateek and Kar, Purushottam},
   journal={Foundations and Trends{\textregistered} in Machine Learning},
   volume={10},
   number={3-4},
@@ -127,422 +102,190 @@
   publisher={Now Publishers Inc. Hanover, MA, USA}
 }
 
-@inproceedings{Allen-Zhu18make,
-  author    = {Zeyuan Allen{-}Zhu},
-  editor    = {Samy Bengio and
-               Hanna M. Wallach and
-               Hugo Larochelle and
-               Kristen Grauman and
-               Nicol{\`{o}} Cesa{-}Bianchi and
-               Roman Garnett},
-  title     = {How To Make the Gradients Small Stochastically: Even Faster Convex
-               and Nonconvex {SGD}},
-  booktitle = {Advances in Neural Information Processing Systems 31: Annual Conference
-               on Neural Information Processing Systems 2018, NeurIPS 2018, December
-               3-8, 2018, Montr{\'{e}}al, Canada},
-  pages     = {1165--1175},
-  year      = {2018},
-  url       = {https://proceedings.neurips.cc/paper/2018/hash/996a7fa078cc36c46d02f9af3bef918b-Abstract.html},
-  timestamp = {Thu, 21 Jan 2021 15:15:20 +0100},
-  biburl    = {https://dblp.org/rec/conf/nips/Allen-Zhu18.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+@article{allen2018make,
+  title={How To Make the Gradients Small Stochastically: Even Faster Convex and Nonconvex {SGD}},
+  author={Allen-Zhu, Zeyuan},
+  journal={Advances in Neural Information Processing Systems},
+  volume={31},
+  pages={1157--1167},
+  year={2018}
 }
 
-@inproceedings{BernsteinWAA18signsgd,
-  author    = {Jeremy Bernstein and
-               Yu{-}Xiang Wang and
-               Kamyar Azizzadenesheli and
-               Animashree Anandkumar},
-  editor    = {Jennifer G. Dy and
-               Andreas Krause},
-  title     = {{signSGD:} Compressed Optimisation for Non-Convex Problems},
-  booktitle = {Proceedings of the 35th International Conference on Machine Learning,
-               {ICML} 2018, Stockholmsm{\"{a}}ssan, Stockholm, Sweden, July
-               10-15, 2018},
-  series    = {Proceedings of Machine Learning Research},
-  volume    = {80},
-  pages     = {559--568},
-  publisher = {{PMLR}},
-  year      = {2018},
-  url       = {http://proceedings.mlr.press/v80/bernstein18a.html},
-  timestamp = {Thu, 30 Sep 2021 17:07:36 +0200},
-  biburl    = {https://dblp.org/rec/conf/icml/BernsteinWAA18.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+@inproceedings{bernstein2018signsgd,
+  title={{signSGD}: Compressed optimisation for non-convex problems},
+  author={Bernstein, Jeremy and Wang, Yu-Xiang and Azizzadenesheli, Kamyar and Anandkumar, Animashree},
+  booktitle={International Conference on Machine Learning},
+  pages={560--569},
+  year={2018},
+  organization={PMLR}
 }
 
-@inproceedings{ChenLSH19convergence,
-  author    = {Xiangyi Chen and
-               Sijia Liu and
-               Ruoyu Sun and
-               Mingyi Hong},
-  title     = {On the Convergence of {A} Class of Adam-Type Algorithms for Non-Convex
-               Optimization},
-  booktitle = {7th International Conference on Learning Representations, {ICLR} 2019,
-               New Orleans, LA, USA, May 6-9, 2019},
-  publisher = {OpenReview.net},
-  year      = {2019},
-  url       = {https://openreview.net/forum?id=H1x-x309tm},
-  timestamp = {Thu, 03 Sep 2020 16:02:23 +0200},
-  biburl    = {https://dblp.org/rec/conf/iclr/ChenLSH19.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+@inproceedings{chen2018convergence,
+  title={On the Convergence of A Class of {Adam}-Type Algorithms for Non-Convex Optimization},
+  author={Chen, Xiangyi and Liu, Sijia and Sun, Ruoyu and Hong, Mingyi},
+  booktitle={International Conference on Learning Representations},
+  year={2018}
 }
 
-@article{DeMU18convergence,
-  title={Convergence guarantees for {RMSProp} and {Adam} in non-convex optimization and an empirical comparison to Nesterov acceleration},
+@article{de2018convergence,
+  title={Convergence guarantees for RMSProp and ADAM in non-convex optimization and an empirical comparison to Nesterov acceleration},
   author={De, Soham and Mukherjee, Anirbit and Ullah, Enayat},
   journal={arXiv preprint arXiv:1807.06766},
   year={2018}
 }
 
-@article{Defossez20simple,
+@article{defossez2020simple,
   title = {A Simple Convergence Proof of {A}dam and {A}dagrad},
   author = {D{\'e}fossez, Alexandre and Bottou, L{\'e}on and Bach, Francis and Usunier, Nicolas},
   journal = {arXiv preprint arXiv:2003.02395},
   year = {2020}
 }
 
-@article{DouL21one,
+@article{dou2021one,
   title = {On the One-sided Convergence of {Adam}-type Algorithms in Non-convex Non-concave Min-max Optimization},
   author = {Dou, Zehao and Li, Yuanzhi},
   journal = {arXiv preprint arXiv:2109.14213},
   year = {2021}
 }
 
-@article{DuchiHS11adaptive,
-  author    = {John C. Duchi and
-               Elad Hazan and
-               Yoram Singer},
-  title     = {Adaptive Subgradient Methods for Online Learning and Stochastic Optimization},
-  journal   = {Journal of Machine Learning Research},
-  volume    = {12},
-  pages     = {2121--2159},
-  year      = {2011},
-  url       = {http://dl.acm.org/citation.cfm?id=2021068},
-  timestamp = {Wed, 10 Jul 2019 15:28:02 +0200},
-  biburl    = {https://dblp.org/rec/journals/jmlr/DuchiHS11.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+@article{duchi2011adaptive,
+  title={Adaptive subgradient methods for online learning and stochastic optimization},
+  author={Duchi, John and Hazan, Elad and Singer, Yoram},
+  journal={Journal of machine learning research},
+  volume={12},
+  number={7},
+  year={2011}
 }
 
-@article{Fang19convergence,
+@article{fang2019convergence,
   title={Convergence analyses of online {Adam} algorithm in convex setting and two-layer {ReLU} neural network},
   author={Fang, Biyi and Klabjan, Diego},
   journal={arXiv preprint arXiv:1905.09356},
   year={2019}
 }
 
-@article{GhadimiL13stochastic,
-  author    = {Saeed Ghadimi and
-               Guanghui Lan},
-  title     = {Stochastic First- and Zeroth-Order Methods for Nonconvex Stochastic
-               Programming},
-  journal   = {{SIAM} J. Optim.},
-  volume    = {23},
-  number    = {4},
-  pages     = {2341--2368},
-  year      = {2013},
-  url       = {https://doi.org/10.1137/120880811},
-  doi       = {10.1137/120880811},
-  timestamp = {Mon, 08 Jun 2020 22:16:11 +0200},
-  biburl    = {https://dblp.org/rec/journals/siamjo/GhadimiL13a.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+@article{ghadimi2013stochastic,
+  title={Stochastic first-and zeroth-order methods for nonconvex stochastic programming},
+  author={Ghadimi, Saeed and Lan, Guanghui},
+  journal={SIAM Journal on Optimization},
+  volume={23},
+  number={4},
+  pages={2341--2368},
+  year={2013},
+  publisher={SIAM}
 }
 
-@article{GhadimiL16accelerated,
-  author    = {Saeed Ghadimi and
-               Guanghui Lan},
-  title     = {Accelerated gradient methods for nonconvex nonlinear and stochastic
-               programming},
-  journal   = {Mathematical Programming},
-  volume    = {156},
-  number    = {1-2},
-  pages     = {59--99},
-  year      = {2016},
-  url       = {https://doi.org/10.1007/s10107-015-0871-8},
-  doi       = {10.1007/s10107-015-0871-8},
-  timestamp = {Sat, 27 May 2017 14:25:32 +0200},
-  biburl    = {https://dblp.org/rec/journals/mp/GhadimiL16.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+@article{ghadimi2016accelerated,
+  title={Accelerated gradient methods for nonconvex nonlinear and stochastic programming},
+  author={Ghadimi, Saeed and Lan, Guanghui},
+  journal={Mathematical Programming},
+  volume={156},
+  number={1-2},
+  pages={59--99},
+  year={2016},
+  publisher={Springer}
 }
 
-@inproceedings{HuangWD19nostalgic,
-  author    = {Haiwen Huang and
-               Chang Wang and
-               Bin Dong},
-  editor    = {Sarit Kraus},
-  title     = {Nostalgic {Adam}: Weighting More of the Past Gradients When Designing
-               the Adaptive Learning Rate},
-  booktitle = {Proceedings of the Twenty-Eighth International Joint Conference on
-               Artificial Intelligence, {IJCAI} 2019, Macao, China, August 10-16,
-               2019},
-  pages     = {2556--2562},
-  publisher = {ijcai.org},
-  year      = {2019},
-  url       = {https://doi.org/10.24963/ijcai.2019/355},
-  doi       = {10.24963/ijcai.2019/355},
-  timestamp = {Tue, 20 Aug 2019 16:18:18 +0200},
-  biburl    = {https://dblp.org/rec/conf/ijcai/HuangWD19.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+@inproceedings{huang2019nostalgic,
+  title={Nostalgic {ADAM}: Weighting more of the past gradients when designing the adaptive learning rate},
+  author={Huang, Haiwen and Wang, Chang and Dong, Bin},
+  booktitle={28th International Joint Conference on Artificial Intelligence, IJCAI 2019},
+  pages={2556--2562},
+  year={2019}
 }
 
-@inproceedings{KingmaB15adam,
-  author    = {Diederik P. Kingma and
-               Jimmy Ba},
-  editor    = {Yoshua Bengio and
-               Yann LeCun},
-  title     = {Adam: {A} Method for Stochastic Optimization},
-  booktitle = {3rd International Conference on Learning Representations, {ICLR} 2015,
-               San Diego, CA, USA, May 7-9, 2015, Conference Track Proceedings},
-  year      = {2015},
-  url       = {http://arxiv.org/abs/1412.6980},
-  timestamp = {Thu, 25 Jul 2019 14:25:37 +0200},
-  biburl    = {https://dblp.org/rec/journals/corr/KingmaB14.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+@article{kingma2014adam,
+  title={{Adam}: A method for stochastic optimization},
+  author={Kingma, Diederik P and Ba, Jimmy},
+  journal={arXiv preprint arXiv:1412.6980},
+  year={2014}
 }
 
-@inproceedings{LiO19convergence,
-  author    = {Xiaoyu Li and
-               Francesco Orabona},
-  editor    = {Kamalika Chaudhuri and
-               Masashi Sugiyama},
-  title     = {On the Convergence of Stochastic Gradient Descent with Adaptive Stepsizes},
-  booktitle = {The 22nd International Conference on Artificial Intelligence and Statistics,
-               {AISTATS} 2019, 16-18 April 2019, Naha, Okinawa, Japan},
-  series    = {Proceedings of Machine Learning Research},
-  volume    = {89},
-  pages     = {983--992},
-  publisher = {{PMLR}},
-  year      = {2019},
-  url       = {http://proceedings.mlr.press/v89/li19c.html},
-  timestamp = {Fri, 07 Jun 2019 09:03:47 +0200},
-  biburl    = {https://dblp.org/rec/conf/aistats/LiO19.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+@inproceedings{li2019convergence,
+  title={On the convergence of stochastic gradient descent with adaptive stepsizes},
+  author={Li, Xiaoyu and Orabona, Francesco},
+  booktitle={The 22nd International Conference on Artificial Intelligence and Statistics},
+  pages={983--992},
+  year={2019},
+  organization={PMLR}
 }
 
-@inproceedings{LuFM18accelerating,
-  author    = {Haihao Lu and
-               Robert M. Freund and
-               Vahab S. Mirrokni},
-  editor    = {Jennifer G. Dy and
-               Andreas Krause},
-  title     = {Accelerating Greedy Coordinate Descent Methods},
-  booktitle = {Proceedings of the 35th International Conference on Machine Learning,
-               {ICML} 2018, Stockholmsm{\"{a}}ssan, Stockholm, Sweden, July
-               10-15, 2018},
-  series    = {Proceedings of Machine Learning Research},
-  volume    = {80},
-  pages     = {3263--3272},
-  publisher = {{PMLR}},
-  year      = {2018},
-  url       = {http://proceedings.mlr.press/v80/lu18b.html},
-  timestamp = {Wed, 03 Apr 2019 18:17:30 +0200},
-  biburl    = {https://dblp.org/rec/conf/icml/LuFM18.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+@inproceedings{lu2018accelerating,
+  title={Accelerating greedy coordinate descent methods},
+  author={Lu, Haihao and Freund, Robert and Mirrokni, Vahab},
+  booktitle={International Conference on Machine Learning},
+  pages={3257--3266},
+  year={2018},
+  organization={PMLR}
 }
 
-@inproceedings{ReddiKK18convergence,
-  author    = {Sashank J. Reddi and
-               Satyen Kale and
-               Sanjiv Kumar},
-  title     = {On the Convergence of {Adam} and Beyond},
-  booktitle = {6th International Conference on Learning Representations, {ICLR} 2018,
-               Vancouver, BC, Canada, April 30 - May 3, 2018, Conference Track Proceedings},
-  publisher = {OpenReview.net},
-  year      = {2018},
-  url       = {https://openreview.net/forum?id=ryQu7f-RZ},
-  timestamp = {Thu, 04 Apr 2019 13:20:09 +0200},
-  biburl    = {https://dblp.org/rec/conf/iclr/ReddiKK18.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+@inproceedings{reddi2018convergence,
+  title={On the Convergence of {Adam} and Beyond},
+  author={Reddi, Sashank J and Kale, Satyen and Kumar, Sanjiv},
+  booktitle={International Conference on Learning Representations},
+  year={2018}
 }
 
-@inproceedings{ZaheerRSKK18adaptive,
-  author    = {Manzil Zaheer and
-               Sashank J. Reddi and
-               Devendra Singh Sachan and
-               Satyen Kale and
-               Sanjiv Kumar},
-  editor    = {Samy Bengio and
-               Hanna M. Wallach and
-               Hugo Larochelle and
-               Kristen Grauman and
-               Nicol{\`{o}} Cesa{-}Bianchi and
-               Roman Garnett},
-  title     = {Adaptive Methods for Nonconvex Optimization},
-  booktitle = {Advances in Neural Information Processing Systems 31: Annual Conference
-               on Neural Information Processing Systems 2018, NeurIPS 2018, December
-               3-8, 2018, Montr{\'{e}}al, Canada},
-  pages     = {9815--9825},
-  year      = {2018},
-  url       = {https://proceedings.neurips.cc/paper/2018/hash/90365351ccc7437a1309dc64e4db32a3-Abstract.html},
-  timestamp = {Thu, 21 Jan 2021 15:15:21 +0100},
-  biburl    = {https://dblp.org/rec/conf/nips/ZaheerRSKK18.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+@inproceedings{reddi2018adaptive,
+  title={Adaptive methods for nonconvex optimization},
+  author={Reddi, S and Zaheer, Manzil and Sachan, Devendra and Kale, Satyen and Kumar, Sanjiv},
+  booktitle={Proceeding of 32nd Conference on Neural Information Processing Systems (NIPS 2018)},
+  year={2018}
 }
 
-@inproceedings{WardWB19adagrad,
-  author    = {Rachel Ward and
-               Xiaoxia Wu and
-               L{\'{e}}on Bottou},
-  editor    = {Kamalika Chaudhuri and
-               Ruslan Salakhutdinov},
-  title     = {AdaGrad stepsizes: sharp convergence over nonconvex landscapes},
-  booktitle = {Proceedings of the 36th International Conference on Machine Learning,
-               {ICML} 2019, 9-15 June 2019, Long Beach, California, {USA}},
-  series    = {Proceedings of Machine Learning Research},
-  volume    = {97},
-  pages     = {6677--6686},
-  publisher = {{PMLR}},
-  year      = {2019},
-  url       = {http://proceedings.mlr.press/v97/ward19a.html},
-  timestamp = {Tue, 11 Jun 2019 15:37:38 +0200},
-  biburl    = {https://dblp.org/rec/conf/icm/WardWB19.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+@inproceedings{ward2019adagrad,
+  title={{AdaGrad} stepsizes: Sharp convergence over nonconvex landscapes},
+  author={Ward, Rachel and Wu, Xiaoxia and Bottou, Leon},
+  booktitle={International Conference on Machine Learning},
+  pages={6677--6686},
+  year={2019},
+  organization={PMLR}
 }
 
-@article{YangLL16unified,
+@article{yang2016unified,
  author = {Yang, Tianbao and Lin, Qihang and Li, Zhe},
  journal = {arXiv preprint arXiv:1604.03257},
  title = {Unified convergence analysis of stochastic momentum methods for convex and non-convex optimization},
  year = {2016}
 }
 
-@inproceedings{ZhangKVKRKS20why,
-  author    = {Jingzhao Zhang and
-               Sai Praneeth Karimireddy and
-               Andreas Veit and
-               Seungyeon Kim and
-               Sashank J. Reddi and
-               Sanjiv Kumar and
-               Suvrit Sra},
-  editor    = {Hugo Larochelle and
-               Marc'Aurelio Ranzato and
-               Raia Hadsell and
-               Maria{-}Florina Balcan and
-               Hsuan{-}Tien Lin},
-  title     = {Why are Adaptive Methods Good for Attention Models?},
-  booktitle = {Advances in Neural Information Processing Systems 33: Annual Conference
-               on Neural Information Processing Systems 2020, NeurIPS 2020, December
-               6-12, 2020, virtual},
-  year      = {2020},
-  url       = {https://proceedings.neurips.cc/paper/2020/hash/b05b57f6add810d3b7490866d74c0053-Abstract.html},
-  timestamp = {Tue, 19 Jan 2021 15:57:07 +0100},
-  biburl    = {https://dblp.org/rec/conf/nips/ZhangKVKRKS20.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+@article{zhang2020adaptive,
+  title={Why are Adaptive Methods Good for Attention Models?},
+  author={Zhang, Jingzhao and Karimireddy, Sai Praneeth and Veit, Andreas and Kim, Seungyeon and Reddi, Sashank and Kumar, Sanjiv and Sra, Suvrit},
+  journal={Advances in Neural Information Processing Systems},
+  volume={33},
+  year={2020}
 }
 
-@article{ZhouTYCG18convergence,
-  author    = {Dongruo Zhou and
-               Yiqi Tang and
-               Ziyan Yang and
-               Yuan Cao and
-               Quanquan Gu},
-  title     = {On the Convergence of Adaptive Gradient Methods for Nonconvex Optimization},
-  journal   = {CoRR},
-  volume    = {abs/1808.05671},
-  year      = {2018},
-  url       = {http://arxiv.org/abs/1808.05671},
-  eprinttype = {arXiv},
-  eprint    = {1808.05671},
-  timestamp = {Wed, 13 Jan 2021 16:36:40 +0100},
-  biburl    = {https://dblp.org/rec/journals/corr/abs-1808-05671.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+@article{zhou2018convergence,
+ author = {Zhou, Dongruo and Chen, Jinghui and Cao, Yuan and Tang, Yiqi and Yang, Ziyan and Gu, Quanquan},
+ journal = {arXiv preprint arXiv:1808.05671},
+ title = {On the convergence of adaptive gradient methods for nonconvex optimization},
+ year = {2018}
 }
 
-@inproceedings{ZouSJZL19sufficient,
-  author    = {Fangyu Zou and
-               Li Shen and
-               Zequn Jie and
-               Weizhong Zhang and
-               Wei Liu},
-  title     = {A Sufficient Condition for Convergences of Adam and RMSProp},
-  booktitle = {{IEEE} Conference on Computer Vision and Pattern Recognition, {CVPR}
-               2019, Long Beach, CA, USA, June 16-20, 2019},
-  pages     = {11127--11135},
-  publisher = {Computer Vision Foundation / {IEEE}},
-  year      = {2019},
-  url       = {http://openaccess.thecvf.com/content\_CVPR\_2019/html/Zou\_A\_Sufficient\_Condition\_for\_Convergences\_of\_Adam\_and\_RMSProp\_CVPR\_2019\_paper.html},
-  doi       = {10.1109/CVPR.2019.01138},
-  timestamp = {Mon, 30 Aug 2021 17:01:14 +0200},
-  biburl    = {https://dblp.org/rec/conf/cvpr/ZouSJZL19.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+@inproceedings{zou2019sufficient,
+  title={A sufficient condition for convergences of {Adam} and {RMSprop}},
+  author={Zou, Fangyu and Shen, Li and Jie, Zequn and Zhang, Weizhong and Liu, Wei},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  pages={11127--11135},
+  year={2019}
 }
 
-@article{ZouSJSL18weighted,
+@article{zou2018weighted,
   title={Weighted {Adagrad} with unified momentum},
   author={Zou, Fangyu and Shen, Li and Jie, Zequn and Sun, Ju and Liu, Wei},
   journal={arXiv preprint arXiv:1808.03408},
   year={2018}
 }
 
-@article{RichtarikT14iteration,
-  author    = {Peter Richt{\'{a}}rik and
-               Martin Tak{\'{a}}c},
-  title     = {Iteration complexity of randomized block-coordinate descent methods
-               for minimizing a composite function},
-  journal   = {Math. Program.},
-  volume    = {144},
-  number    = {1-2},
-  pages     = {1--38},
-  year      = {2014},
-  url       = {https://doi.org/10.1007/s10107-012-0614-z},
-  doi       = {10.1007/s10107-012-0614-z},
-  timestamp = {Sat, 09 Apr 2022 12:32:20 +0200},
-  biburl    = {https://dblp.org/rec/journals/mp/RichtarikT14.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
-}
-
-@inproceedings{CohenKLKT21gradient,
-  author    = {Jeremy M. Cohen and
-               Simran Kaur and
-               Yuanzhi Li and
-               J. Zico Kolter and
-               Ameet Talwalkar},
-  title     = {Gradient Descent on Neural Networks Typically Occurs at the Edge of
-               Stability},
-  booktitle = {9th International Conference on Learning Representations, {ICLR} 2021,
-               Virtual Event, Austria, May 3-7, 2021},
-  publisher = {OpenReview.net},
-  year      = {2021},
-  url       = {https://openreview.net/forum?id=jh-rTtvkGeM},
-  timestamp = {Wed, 23 Jun 2021 17:36:39 +0200},
-  biburl    = {https://dblp.org/rec/conf/iclr/CohenKLKT21.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
-}
-
-@book{Martens16second,
-  title={Second-order optimization for neural networks},
-  author={Martens, James},
-  year={2016},
-  publisher={University of Toronto (Canada)}
-}
-
-@article{BottouCN18optimization,
-  author    = {L{\'{e}}on Bottou and
-               Frank E. Curtis and
-               Jorge Nocedal},
-  title     = {Optimization Methods for Large-Scale Machine Learning},
-  journal   = {{SIAM} Rev.},
-  volume    = {60},
-  number    = {2},
-  pages     = {223--311},
-  year      = {2018},
-  url       = {https://doi.org/10.1137/16M1080173},
-  doi       = {10.1137/16M1080173},
-  timestamp = {Tue, 29 Sep 2020 10:58:40 +0200},
-  biburl    = {https://dblp.org/rec/journals/siamrev/BottouCN18.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
-}
-
-@inproceedings{JacotGH20asymptotic,
-  author    = {Arthur Jacot and
-               Franck Gabriel and
-               Cl{\'{e}}ment Hongler},
-  title     = {The asymptotic spectrum of the Hessian of {DNN} throughout training},
-  booktitle = {8th International Conference on Learning Representations, {ICLR} 2020,
-               Addis Ababa, Ethiopia, April 26-30, 2020},
-  publisher = {OpenReview.net},
-  year      = {2020},
-  url       = {https://openreview.net/forum?id=SkgscaNYPS},
-  timestamp = {Thu, 07 May 2020 17:11:47 +0200},
-  biburl    = {https://dblp.org/rec/conf/iclr/JacotGH20.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+@article{richtarik2014iteration,
+  title={Iteration complexity of randomized block-coordinate descent methods for minimizing a composite function},
+  author={Richt{\'a}rik, Peter and Tak{\'a}{\v{c}}, Martin},
+  journal={Mathematical Programming},
+  volume={144},
+  number={1},
+  pages={1--38},
+  year={2014},
+  publisher={Springer}
 }
