Update sty and add some bib

--- a/panyan.sty
+++ b/panyan.sty
@@ -93,11 +93,11 @@
 
 % probability type operators
 \let\Pr\relax
-\DeclareMathOperator*{\Pr}{Pr}
+\DeclareMathOperator*{\Pr}{\mathbf{Pr}}
 \DeclareMathOperator*{\E}{\mathbb{E}}
-\DeclareMathOperator*{\Var}{Var}
-\DeclareMathOperator*{\Cov}{Cov}
-\DeclareMathOperator*{\stddev}{stddev}
+\DeclareMathOperator*{\Var}{\mathbf{Var}}
+\DeclareMathOperator*{\Cov}{\mathbf{Cov}}
+\DeclareMathOperator*{\stddev}{\mathbf{stddev}}
 \DeclareMathOperator{\littlesum}{{\textstyle \sum}}
 \DeclareMathOperator{\littleprod}{{\textstyle \prod}}
 \DeclareMathOperator*{\avg}{avg}
@@ -129,6 +129,8 @@
 \DeclareMathOperator{\one}{\mathbf{1}} % indicator random variable
 \DeclareMathOperator{\prox}{prox}
 \DeclareMathOperator{\nnz}{nnz}
+\DeclareMathOperator{\Ker}{Ker}
+\DeclareMathOperator{\Range}{Range}
 
 % number systems
 \newcommand{\R}{\mathbb{R}}
