--- a/references.bib
+++ b/references.bib
@@ -78,7 +78,7 @@
 }
 
 @inproceedings{jacot2018neural,
-  title={Neural tangent kernel: convergence and generalization in neural networks},
+  title={Neural tangent kernel: {C}onvergence and generalization in neural networks},
   author={Jacot, Arthur and Gabriel, Franck and Hongler, Cl{\'e}ment},
   booktitle={Proceedings of the 32nd International Conference on Neural Information Processing Systems},
   pages={8580--8589},
@@ -289,3 +289,76 @@
   year={2014},
   publisher={Springer}
 }
+
+@article{song2021training,
+  title={Training Multi-Layer Over-Parametrized Neural Network in Subquadratic Time},
+  author={Song, Zhao and Zhang, Lichen and Zhang, Ruizhe},
+  journal={arXiv preprint arXiv:2112.07628},
+  year={2021}
+}
+
+@inproceedings{van2021training,
+  title={Training (Overparametrized) Neural Networks in Near-Linear Time},
+  author={van den Brand, Jan and Peng, Binghui and Song, Zhao and Weinstein, Omri},
+  booktitle={12th Innovations in Theoretical Computer Science Conference (ITCS 2021)},
+  volume={185},
+  pages={63},
+  year={2021},
+  organization={Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik}
+}
+
+@inproceedings{cohen2020gradient,
+  title={Gradient Descent on Neural Networks Typically Occurs at the Edge of Stability},
+  author={Cohen, Jeremy and Kaur, Simran and Li, Yuanzhi and Kolter, J Zico and Talwalkar, Ameet},
+  booktitle={International Conference on Learning Representations},
+  year={2020}
+}
+
+@book{martens2016second,
+  title={Second-order optimization for neural networks},
+  author={Martens, James},
+  year={2016},
+  publisher={University of Toronto (Canada)}
+}
+
+@article{bottou2018optimization,
+  title={Optimization methods for large-scale machine learning},
+  author={Bottou, L{\'e}on and Curtis, Frank E and Nocedal, Jorge},
+  journal={Siam Review},
+  volume={60},
+  number={2},
+  pages={223--311},
+  year={2018},
+  publisher={SIAM}
+}
+
+@inproceedings{jacot2019asymptotic,
+  title={The asymptotic spectrum of the Hessian of {DNN} throughout training},
+  author={Jacot, Arthur and Gabriel, Franck and Hongler, Clement},
+  booktitle={International Conference on Learning Representations},
+  year={2019}
+}
+
+@article{chen2021visualgpt,
+  title={VisualGPT: Data-efficient Image Captioning by Balancing Visual Input and Linguistic Knowledge from Pretraining},
+  author={Chen, Jun and Guo, Han and Yi, Kai and Li, Boyang and Elhoseiny, Mohamed},
+  journal={arXiv preprint arXiv:2102.10407},
+  year={2021}
+}
+
+@article{chen2021visualgpt,
+  title={VisualGPT: Data-efficient Adaptation of Pretrained Language Models for Image Captioning},
+  author={Chen, Jun and Guo, Han and Yi, Kai and Li, Boyang and Elhoseiny, Mohamed},
+  journal={arXiv preprint arXiv:2102.10407},
+  year={2021}
+}
+
+@article{tsimpoukelli2021multimodal,
+  title={Multimodal few-shot learning with frozen language models},
+  author={Tsimpoukelli, Maria and Menick, Jacob and Cabi, Serkan and Eslami, SM and Vinyals, Oriol and Hill, Felix},
+  journal={Advances in Neural Information Processing Systems},
+  volume={34},
+  year={2021}
+}
+
+
