Update some bibs

--- a/panyan.sty
+++ b/panyan.sty
@@ -131,6 +131,8 @@
 \DeclareMathOperator{\nnz}{nnz}
 \DeclareMathOperator{\Ker}{Ker}
 \DeclareMathOperator{\Range}{Range}
+\DeclareMathOperator{\curl}{curl}
+\DeclareMathOperator{\VS}{VS}
 
 % number systems
 \newcommand{\R}{\mathbb{R}}
