--- a/references.bib
+++ b/references.bib
@@ -361,4 +361,92 @@
   year={2021}
 }
 
+@inproceedings{du2020few,
+  title={Few-Shot Learning via Learning the Representation, Provably},
+  author={Du, Simon Shaolei and Hu, Wei and Kakade, Sham M and Lee, Jason D and Lei, Qi},
+  booktitle={International Conference on Learning Representations},
+  year={2020}
+}
 
+@article{bouniot2020towards,
+  title={Towards better understanding meta-learning methods through multi-task representation learning theory},
+  author={Bouniot, Quentin and Redko, Ievgen and Audigier, Romaric and Loesch, Ang{\'e}lique and Zotkin, Yevhenii and Habrard, Amaury},
+  journal={arXiv preprint arXiv:2010.01992},
+  year={2020}
+}
+
+@inproceedings{tripuraneni2021provable,
+  title={Provable meta-learning of linear representations},
+  author={Tripuraneni, Nilesh and Jin, Chi and Jordan, Michael},
+  booktitle={International Conference on Machine Learning},
+  pages={10434--10443},
+  year={2021},
+  organization={PMLR}
+}
+
+@article{arora2017provable,
+  title={Provable benefits of representation learning},
+  author={Arora, Sanjeev and Risteski, Andrej},
+  journal={arXiv preprint arXiv:1706.04601},
+  year={2017}
+}
+
+@article{rosenfeld2022domain,
+  title={Domain-adjusted regression or: {ERM} may already learn features sufficient for out-of-distribution generalization},
+  author={Rosenfeld, Elan and Ravikumar, Pradeep and Risteski, Andrej},
+  journal={arXiv preprint arXiv:2202.06856},
+  year={2022}
+}
+
+@article{arora2012multiplicative,
+  title={The multiplicative weights update method: a meta-algorithm and applications},
+  author={Arora, Sanjeev and Hazan, Elad and Kale, Satyen},
+  journal={Theory of computing},
+  volume={8},
+  number={1},
+  pages={121--164},
+  year={2012},
+  publisher={Theory of Computing Exchange}
+}
+
+@article{hazan2016introduction,
+  title={Introduction to online convex optimization},
+  author={Hazan, Elad and others},
+  journal={Foundations and Trends{\textregistered} in Optimization},
+  volume={2},
+  number={3-4},
+  pages={157--325},
+  year={2016},
+  publisher={Now Publishers, Inc.}
+}
+
+@article{goodfellow2014generative,
+  title={Generative adversarial nets},
+  author={Goodfellow, Ian and Pouget-Abadie, Jean and Mirza, Mehdi and Xu, Bing and Warde-Farley, David and Ozair, Sherjil and Courville, Aaron and Bengio, Yoshua},
+  journal={Advances in neural information processing systems},
+  volume={27},
+  year={2014}
+}
+
+@book{blum2020foundations,
+  title={Foundations of data science},
+  author={Blum, Avrim and Hopcroft, John and Kannan, Ravindran},
+  year={2020},
+  publisher={Cambridge University Press}
+}
+
+@book{tao2012topics,
+  title={Topics in random matrix theory},
+  author={Tao, Terence},
+  volume={132},
+  year={2012},
+  publisher={American Mathematical Soc.}
+}
+
+@book{conway2019course,
+  title={A course in functional analysis},
+  author={Conway, John B},
+  volume={96},
+  year={2019},
+  publisher={Springer}
+}
